--- a/_posts/2017-11-28-单例设计模式.md
+++ b/_posts/2017-11-28-单例设计模式.md
@@ -20,11 +20,11 @@ tags:
 一个男人只能有一个媳妇「正常情况」，一个人只能有一张嘴，通常一个公司只有一个 CEO ，一个狼群中只有一个狼王等等
 
 #### 2.程序中的单例
-一句话，就是保证一个类仅有一个实例即可「new 一次」，其实好多人都不把单例当作成一个设计模式，只是当作是一个工具类而已，因为它的确很简单，并且当你面视的时候面视官问你设计模式的时候估计都会说：可以说说你了解的设计模式吗「单例除外」。虽然很简单，但是我们还是要掌握和了解它，并且要深层次的了解它
+一句话，就是保证一个类仅有一个实例即可「new 一次」，其实好多人都不把单例当作成一个设计模式，只是当作是一个工具类而已，因为它的确很简单，并且当你面视的时候面视官问你设计模式的时候估计都会说：可以说说你了解的设计模式吗「单例除外」。虽然很简单，但是我们还是要掌握和了解它，并且要深层次的了解它。
 
 > 单例模式的定义
 
-单例单例就是单一的实例，单例模式就保证一个类仅有一个实例，并且提供一个可以仿问的全局方法可以访问它
+单例单例就是单一的实例，官方定义： **保证一个类只有一个实例,并提供一个全局访问点。**
 
 > 单例的应用
 
@@ -37,21 +37,30 @@ tags:
 
 ##### 1.经典模式
 
-		public class Singleton
-		{
-		    private static Singleton instance;
-		    private Singleton()
-		    {
-		    }
-		    public static Singleton GetInstance()
-		    {
-		        if (instance==null)
-		        {
-		            instance=new Singleton();
-		        }
-		        return instance;
-		    }
-		}
+	/// <summary>
+    ///  Singleton mode implementation
+    /// </summary>
+    public class Singleton
+    {
+        //define a static variable to hold an instance of the class
+        private static Singleton instance;
+
+        //define a private constructor,so that the outside can't cteate an instanse of the class
+        private Singleton() { }
+
+        /// <summary>
+        ///  define public methods to provide a global access point, and you can also define public properties to provide global access points
+        /// </summary>
+        public static Singleton GetInstance()
+        {
+            // create if the instance of the class does not exist, otherwise return directly
+            if (instance == null)
+            {
+                instance = new Singleton();
+            }
+            return instance;
+        }
+    }
 	
 
 解析如下：
@@ -62,11 +71,14 @@ tags:
 
 　　3）必须提供一个全局函数访问获得该实例，并且在该函数提供控制实例数量的功能，即通过if语句判断instance是否已被实例化，如果没有则可以同new（）创建一个实例；否则，直接向客户返回一个实例。
 
-　　在这种经典模式下，没有考虑线程并发获取实例问题，即可能出现两个线程同时获取instance实例，且此时其为null时，就会出现两个线程分别创建了instance，违反了单例规则。因此，需对上面代码修改。	
+　　上面单例模式的实现在单线程下确实是完美的，但没有考虑线程并发获取实例问题，在多线程的情况下会得到多个Singleton实例，因为两个线程同时运行GetInstance方法时，此时两个线程判断(instance==null)这个条件都成立，此时两个线程就都会创建Singleton的实例，违反了单例规则。既然上面的实现会运行多个线程执行，那我们对于多线程的解决方案自然就是使GetInstance方法在同一时间只让一个线程运行就好了。因此，需对上面代码修改。	
 
-##### 2.多线程下的单例模式
+##### 2.单例模式的几种实现方式
 
-1、Lazy模式（懒汉式）
+**1、Lazy模式（懒汉式）**
+
+
+**代码演示**
 
 	public class Singleton
 	{
@@ -91,23 +103,31 @@ tags:
 	    }
 	}
 
-上述代码使用了双重锁方式较好地解决了多线程下的单例模式实现。先看内层的if语句块，使用这个语句块时，先进行加锁操作，保证只有一个线程可以访问该语句块，进而保证只创建了一个实例。再看外层的if语句块，这使得每个线程欲获取实例时不必每次都得加锁，因为只有实例为空时（即需要创建一个实例），才需加锁创建，若果已存在一个实例，就直接返回该实例，节省了性能开销。
+上述代码使用了双重锁方式较好地解决了多线程下的单例模式实现。先看内层的if语句块，使用这个语句块时，先进行加锁操作，保证只有一个线程可以访问该语句块，进而保证只创建了一个实例。再看外层的if语句块，这使得每个线程欲获取实例时不必每次都得加锁，因为只有实例为空时（即需要创建一个实例），才需加锁创建，若果已存在一个实例，就直接返回该实例，节省了性能开销。<br>
+到这里，有的同学可能会有疑问，lock语句内层的if(instance==null)感觉是多余的，其实一开始一看我也觉得是多余的，仔细一想，这句代码是不能省的，两个线程同时运行lock外层的if (instance == null)，都成立，第一条线程加锁实例化一个对象，解锁后，如果不加判断，第二条线程直接实例化一个对象，这就不是单例了。
 
-2、饿汉模式
 
+**2、饿汉模式**
+
+饿汉式单例模式如其名，是一个饿货，类的实例在类加载的时候就初始化出来「把这一过程当作一个汉堡，也就是说必须要把汉堡提前准备好，饿货就知道吃」，
 这种模式的特点是自己主动实例。
 
-	public sealed class Singleton
-	{
+**特点**
+
+- 1、是线程安全的
+- 2、类不是延时加载「直接是类加载的时候就初始化」
+
+     public sealed class Singleton
+	  {
 	    private static readonly Singleton instance=new Singleton();
-	    private Singleton()
-	    {
-	    }
+		
+	    private Singleton(){}
+	    
 	    public static Singleton GetInstance()
 	    {
 	        return instance;        
 	    }
-	}
+	  }
 
 上面使用的readonly关键可以跟static一起使用，用于指定该常量是类别级的，它的初始化交由静态构造函数实现，并可以在运行时编译。在这种模式下，无需自己解决线程安全性问题，CLR会给我们解决。由此可以看到这个类被加载时，会自动实例化这个类，而不用在第一次调用GetInstance()后才实例化出唯一的单例对象。
 
