--- a/_posts/2017-11-28-单例设计模式.md
+++ b/_posts/2017-11-28-单例设计模式.md
@@ -131,7 +131,7 @@ tags:
 
 上面使用的readonly关键可以跟static一起使用，用于指定该常量是类别级的，它的初始化交由静态构造函数实现，并可以在运行时编译。在这种模式下，无需自己解决线程安全性问题，CLR会给我们解决。由此可以看到这个类被加载时，会自动实例化这个类，而不用在第一次调用GetInstance()后才实例化出唯一的单例对象。
 
-参考资料：<br>
+Reference：<br>
 1.[C#设计模式(1)——单例模式](http://www.cnblogs.com/zhili/p/SingletonPatterm.html)<br>
 2.[人人都会设计模式：单例模式--SingleTon](https://mp.weixin.qq.com/s?__biz=MzA3MjgwNDIzNQ==&mid=2651941869&idx=1&sn=daf418bf5f445b856e6828b1d64ee4db&chksm=84fd7909b38af01f972b758ce07f1c2cdbe7fad5c1f868bfaa6d7acbf1b75087d3cb610fb00b&mpshare=1&scene=23&srcid=1115l4KDdG5BNmK2aOGwAKI5#rd)<br>
 3.[C#设计模式学习笔记-单例模式](http://www.cnblogs.com/xun126/archive/2011/03/09/1970807.html)<br>
