--- a/_posts/2019-02-28-2月早读.md
+++ b/_posts/2019-02-28-2月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2019-02-27
+date:   2019-02-28
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day182 02.28 早读原文](https://mp.weixin.qq.com/s/qVddL76XLVt4MPCYNrxXmw)
+
+Friends stick together through thick and thin.
+
+朋友无论怎样都应该团结一致的
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTIwNDYw">
+</audio>
 
 ##### [Day181 02.27 早读原文](https://mp.weixin.qq.com/s/mrkUWEmR_JceJFJjvl6ROg)
 
