--- a/_posts/2017-11-10-陈果情商课.md
+++ b/_posts/2017-11-10-陈果情商课.md
@@ -19,25 +19,26 @@ tags:
 ## 孤独与寂寞
 
 1、什么是孤独？孤独是从人群中偷来的享受，她高傲、优美，完全是精神的自由。 孤独，是要我们有独处的时间，做到“如我所是”，完全不需要装扮、做作，不需要戴着帽子抽根烟来装深沉。
-
  
 2、什么是寂寞？寂寞是一种病，是一种精神的饥饿。既然是病，就需要治疗。寂寞的人如何找到治疗的方法？方法就是人群，寂寞的人总是需要他人的陪伴。
 
  
-3、人群的治疗分为两种。一种是利益需要建造人脉，这仅仅是互为功利（确实有用，不过不会有真正的朋友）；还有一种是寂寞者的相互取暖，这是廉价的交往。 
+3、人群的治疗（社交动机）分为两种。一种是利益需要建造人脉，这仅仅是互为功利（确实有用，不过不会有真正的朋友）；还有一种是寂寞者的相互取暖，这是廉价的交往（社交是廉价的）。 
 
 
 4、狂欢是一群人的寂寞，孤独是一个人的狂欢。 
 
 5、孤独不求外物，反求于己。（也就是淡定，我理解为一种无上菩提的境界）。 反求诸己：遇到挫折时切莫责怪他人，而应先反过来从自己身上找出问题的症结，并努力加以改正。
  
-6、寂寞是无可慰藉的牢笼。因为寂寞的人无所适从，焦躁不安。他们的思想从而贫瘠而荒芜，产生自我厌弃感。 
+6、孤独是由思想带来的挥之不去的气质，寂寞是迫于无奈的虚无。
 
-7、他比烟花更寂寞。烟花绽放于无形，消失于乌有，当中是有短暂的释放，伴随而来的是无边的寂寞。 
+7、寂寞是无可慰藉的牢笼。因为寂寞的人无所适从，焦躁不安。他们的思想从而贫瘠而荒芜，产生自我厌弃感。寂寞者的群体是逃不出寂寞本身的。 
 
-8、孤独不是故作姿态，孤独是一种心境。沉默未必是孤独，孤独没有任何形式， 那是孤独者精神上的自我流浪。装出来的叫浮躁，那是一种虚荣心，是为了招揽目光。 
+8、他比烟花更寂寞。烟花绽放于无形，消失于乌有，当中是有短暂的释放，伴随而来的是无边的寂寞。 
 
-9、孤独者对环境没有刻意的要求，无论是独处或身处热闹的人群，都能够做到心境的“和敬清寂”。这是日本茶道的精神，与环境相和谐、表现出一份恰到好处的尊敬、不影响自己的清静、冷寂，也是一种娴静与淡定。 
+9、孤独不是故作姿态，孤独是一种心境。沉默未必是孤独，孤独没有任何形式， 那是孤独者精神上的自我流浪。装出来的叫浮躁，那是一种虚荣心，是为了招揽目光。 
+
+10、孤独者对环境没有刻意的要求，无论是独处或身处热闹的人群，都能够做到心境的“和敬清寂”。这是日本茶道的精神，与环境相和谐、表现出一份恰到好处的尊敬、不影响自己的清静、冷寂，也是一种娴静与淡定。 
 
 
 ## 孤独与独处 
@@ -64,6 +65,11 @@ tags:
 
 10、祈祷是一种与虚空对话的过程，也是和自己对话的过程，能够反省自身，是一种高贵的行为。 
 
+11、人在孤独的时候，在独处或自处的时候，你的精神的自由会还你一个真实的自我。
+
+12、自我反思是一切思想的源头，人是在思考自己是而不是思考他人的过程中产生了智慧；人也是在自我批判而不是批判他人的过程中展示了你的勇气。
+
+13、看书看到投入的时候，对方说的不是她自己的话，对方说的是你心理一直想说却无从表达的话。在读书的过程中经常会发现It's me.他要木在描述我，要么说出了我的感受，这个时候我们会发现了那种交错时空的共鸣感，你原本有很多疑惑，这些疑惑就像尘封的角落一样，你基本上不去触碰它，因为触碰的结果你也得不到解决，但是就在这一瞬间，某一个前人智者他一生的思考就让你一时间就能够畅然的应下，应下的同事你的尘封的角落全部都被点燃。
 
 ## 朋友 
 
