--- a/_posts/2019-02-28-2月早读.md
+++ b/_posts/2019-02-28-2月早读.md
@@ -14,6 +14,16 @@ tags:
 
 >  **英语早读**
 
+##### [Day183 04.01 早读原文](https://mp.weixin.qq.com/s/-RV9X2HRCdUMVLJa8HhYDQ)
+
+Simple can be harder than complex.Original,much harder than derived.But when you get there,it's worth it,because you can move mountains.
+
+简单不复杂更难，原创比继承更难。但当你做到的时候，一切都是值得的，因为你已经拥有了移动山峰的的能力。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTIxNTM5">
+</audio>
+
+
 ##### [Day182 02.28 早读原文](https://mp.weixin.qq.com/s/qVddL76XLVt4MPCYNrxXmw)
 
 Friends stick together through thick and thin.
