--- a/_posts/2019-08-22-XAML编码规范.md
+++ b/_posts/2019-08-22-XAML编码规范.md
@@ -1,75 +1,100 @@
 ---
 layout: post
-title: C# yield关键字
+title: XAML编码规范
 subtitle:   
 date:   2019-07-24
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
 tags:
-- C#
-- yield
-
+- 编码规范
 ---
 
->  **C# yield关键字**
+>  **XAML编码规范**
 
+## 一、代码可读性
 
-还是和以前一样，我先上代码，请大家先拿到我的代码或者你跟着敲，运行看效果，以及理解每行带代码的作用。我们要带着为什么要用Yield这个关键字，不用可以吗这个目的去学知识，我相信会更加的有意思。
-
-首先我贴出平时正常输出偶数集合的办法
-
-```c#
-    class Program
-    {
-        static List<int> _numArray;
-
-        static Program()
-        {
-            _numArray = new List<int>();
-            for (int i = 0; i <= 10; i++)
-                _numArray.Add(i);
-        }
-
-        static void Main(string[] args) => TestMethod();
-
-        private static void TestMethod()
-        {
-            foreach (var item in GetAllEvenNumber())
-                Console.WriteLine(item);
-            Console.ReadKey();
-        }
-
-        private static IEnumerable<int> GetAllEvenNumber()
-        {
-            #region 不使用yield
-            //var result = new List<int>();
-            //foreach (var num in _numArray)
-            //{
-            //    if (num % 2 == 0)
-            //        result.Add(num);
-            //}
-            //return result;
-            #endregion
-
-            #region 使用yield
-            foreach (var num in _numArray)
-            {
-                if (num % 2 == 0)
-                    yield return num;
-            }
-            yield break;//当前集合已经遍历完毕，我们就跳出当前函数，其实你不加也可以
-            //这个作用就是提前结束当前函数，就是说这个函数运行完毕了。 
-            #endregion
-        }
-    }
+#### a) 每行放一个属性
 
 ```
-大家测试了2个代码结果没，是不是都可以正确拿到全部偶数集合，具体我需要你们测，这样进步快，才会真是学会。只看不练假把戏。
+<TextBlock FontWeight="Bold"
+           Foreground="White" 
+           HorizontalAlignment="Right" 
+           Text="{Binding ArticlesCountText}"
+           TextWrapping="Wrap" />
+```
 
-现在我们说他们的区别： 
-这个才是真正要学的地方 
-我们需要下断点
+#### b) 在元素内，按字母顺序排序属性
 
 
-Reference: [彻底搞懂C#之Yield Return语法的作用和好处](https://blog.csdn.net/qq_33060405/article/details/78484825)<br>
+```
+  <Image Source="/Assets/Shares/NeutralImage.png"
+         Height="125"
+         HorizontalAlignment="Center"
+     	 Width="125"
+         Stretch="UniformToFill"      		      
+         VerticalAlignment="Center" />
+```
+
+
+#### c)	将x：Name或x：Key作为第一个属性
+
+
+```
+ <Button x:Name = "ButtonValidation"
+         Content = "Hello world"
+         Width="100"
+         Height="30"/>
+```
+
+###### 这些属性比任何其他属性更重要，因为：
+- 它们确定控件的唯一性
+- 它们确定控件是否被使用（故事板，代码隐藏，绑定，......）
+
+#### d)	如果元素没有内容，请使用自闭元素
+
+
+```
+ <Button x:Name = "ButtonValidation"
+         Content = "Hello world"
+         Width="100"
+         Height="30"/>
+```
+
+###### 当元素未声明子标记并使用显式结束标记时，会违反此规则。这导致太多的空间 浪费。如下：
+
+
+```
+ <Button x:Name = "ButtonValidation"
+         Content = "Hello world"
+         Width="100"
+         Height="30"></Button>
+```
+
+#### e)	把关联的属性放在最前面并按字母顺序排列
+
+
+```
+  <Button Grid.Column="1" 
+          Grid.Row="2" 
+          Command="{Binding ShowWriterCommand}" 
+          CommandParameter="{Binding WriterAshley}"
+          Style="{StaticResource HubTileButtonStyle}" />
+```
+
+###### Grid.Column / Grid.Row属性就是典型的例子
+
+## 二、命名
+
+#### a)	使用 Pascal Casing
+
+```
+ <Button x:Name = "ButtonCheckout" 
+         Content = "Checkout" />
+```
+
+## 三、可维护性
+
+###### 当属性值在不同位置使用超过2次时，为了获得更好的可维护性，必须将此属性值声明为资源。
+- 将值移动到资源
+- 用StaticResource绑定替换所有值使用。 
