modify blog's tag

--- a/_posts/2018-04-29-Windows客户端开发笔试+面试题.md
+++ b/_posts/2018-04-29-Windows客户端开发笔试+面试题.md
@@ -1,3 +1,18 @@
+---
+layout: post
+title:  Windows客户端开发笔试+面试题
+subtitle: 面试题目
+date:   2017-09-24
+author: JP
+header-img: img/home-bg-o.jpg
+catalog: true
+tags:
+- 面试题
+
+---
+
+>  **Windows客户端开发笔试+面试题*
+
 #### 一.选择题
 ##### 1. 请法出下列WPF模板用于控件模板的选项组合正确的是（B）
 (1) ControlTemplate<br>
