--- a/_posts/2017-08-16-计算机网络协议.md
+++ b/_posts/2017-08-16-计算机网络协议.md
@@ -7,9 +7,7 @@ author:     JP
 header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
-    - Tcp/Ip
-    - Http
-    - Socket
+    - 网络协议
     
 ---
 
