--- a/_posts/2019-08-22-XAML编码规范.md
+++ b/_posts/2019-08-22-XAML编码规范.md
@@ -98,3 +98,7 @@ tags:
 ###### 当属性值在不同位置使用超过2次时，为了获得更好的可维护性，必须将此属性值声明为资源。
 - 将值移动到资源
 - 用StaticResource绑定替换所有值使用。 
+
+
+Reference: [XAML Coding guidelines](https://github.com/cmaneu/xaml-coding-guidelines)<br>
+
