--- a/_posts/2018-04-30-4月早读.md
+++ b/_posts/2018-04-30-4月早读.md
@@ -349,6 +349,5 @@ Very quietly I take my leave,<br> As quietly as I came here;<br> Quietly I wave 
 
 ---
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
-![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
