--- a/_posts/2018-05-29-5月早读.md
+++ b/_posts/2018-05-29-5月早读.md
@@ -271,6 +271,5 @@ The more we try to understand one another,the more exceptional each of us will b
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNTk4">
 </audio>
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
-![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
