--- a/_posts/2018-08-31-8月早读.md
+++ b/_posts/2018-08-31-8月早读.md
@@ -246,6 +246,4 @@ He was once a true love of mine
 </audio>
 
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
-
-![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
