--- a/_posts/2019-02-28-2月早读.md
+++ b/_posts/2019-02-28-2月早读.md
@@ -66,6 +66,5 @@ When you're ugly and someone loves you,you know they love you for who you are.
 </audio>
 
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
-![xxx]()
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
