--- a/_posts/2019-03-04-3月早读.md
+++ b/_posts/2019-03-04-3月早读.md
@@ -36,6 +36,4 @@ Little did I know that one moment would change my whole life.
 
 
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
-
-![xxx]()
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
