--- a/_posts/2018-06-30-6月早读.md
+++ b/_posts/2018-06-30-6月早读.md
@@ -203,6 +203,5 @@ Please don't take my sunshine away
 </audio>
 
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
-![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
