--- a/_posts/2018-07-31-7月早读.md
+++ b/_posts/2018-07-31-7月早读.md
@@ -210,6 +210,5 @@ The only way to prove that you're any good, is just to be good.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NzAw">
 </audio>
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
-![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
