--- a/_posts/2019-01-24-1月早读.md
+++ b/_posts/2019-01-24-1月早读.md
@@ -48,6 +48,4 @@ Keep your foot on the gas padel,until the very day you need to leave.
 
 
 
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
-
-![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
+[点我取一个完美英文名🌹](http://ename.shanbay.com.cn)
