change blog style

--- a/_posts/2020-03-28-C#枚举和字符串的相互转换.md
+++ b/_posts/2020-03-28-C#枚举和字符串的相互转换.md
@@ -24,26 +24,26 @@ public enum Gender
 }
 ```
 如果我需要把枚举转换成字符串，可以用下面两种方法<br>
-- 利用Object.ToString()方法：
+1.利用Object.ToString()方法：
 ```
-    Gender.Male.ToString();
+Gender.Male.ToString();
 ```
-- 使用 nameof 表达式
+2.使用 nameof 表达式
 ```
-    nameof(Gender.Male);
+nameof(Gender.Male);
 ```
  
 #### 字符串转枚举
 
-- 利用Enum.Parse方法：<br>
+1.利用Enum.Parse方法：<br>
 
 ```
-    (Gender)Enum.Parse(typeof(Gender), "Female")
+(Gender)Enum.Parse(typeof(Gender), "Female")
 ```
-- 利用Enum.TryParse方法
+2.利用Enum.TryParse方法
 
 ```
-    Enum.TryParse("Female", out Gender myGender);
+Enum.TryParse("Female", out Gender myGender);
 ```
 
 ##### 参考文档：<br/>
