--- a/_posts/2019-08-22-XAML编码规范.md
+++ b/_posts/2019-08-22-XAML编码规范.md
@@ -20,7 +20,7 @@ tags:
 <TextBlock FontWeight="Bold"
            Foreground="White" 
            HorizontalAlignment="Right" 
-           Text="{Binding ArticlesCountText}"
+           Text="{Binding ArticlesCountText"
            TextWrapping="Wrap" />
 ```
 
