--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -439,6 +439,14 @@ public class Control: Component
 - 在命名状态变量时，避免使用诸如 `Flag` 的术语。状态变量不同于布尔变量的地方是它可以具有两个以上的可能值。不是使用 `documentFlag`，而是使用更具描述性的名称，如 `documentFormatType`。
 - 即使对于可能仅出现在几个代码行中的生存期很短的变量，仍然使用有意义的名称。仅对于短循环索引使用单字母变量名，如 i 或 j。 可能的情况下，尽量不要使用原义数字（幻数）或原义字符串，如
 `for (int i = 1; i < 7; i++)`。而是使用命名常数，如 `for (int i = 1; i < NUM_DAYS_IN_WEEK; i++)` 以便于维护和理解。
+-  用于事件处理的委托添加 **EventHandler** 后缀
+-  用于事件处理之外的那些委托添加 **Callback** 后缀
+-  不要给委托添加 **Delegate** 后缀
+-  用名词或名词词组来给类型命名，在少数情况下也可以用形容词词组来给类型命名
+-  用动词或动词词组来命名方法
+-  用名词、名词词组或形容词来命名属性
+-  要用动词或动词短语来命名事件
+-  要用名词或名词短语来命名字段
 
 ##### 5.2 大小写规则
 
@@ -816,64 +824,9 @@ public struct Color
 
 另外，避免使用与C#语言关键字冲突的标识符。
 
-
-### 第五章 命名规范
-
-#### 5.1 命名概述
-名称应该说明“什么”而不是“如何”。通过避免使用公开基础实现（它们会发生改变）的名称，可以保留简化复杂性的抽象层。例如，可以使用 GetNextStudent()，而不是 GetNextArrayElement()。
-
-命名原则是：
-
-选择正确名称时的困难可能表明需要进一步分析或定义项的目的。使名称足够长以便有一定的意义，并且足够短以避免冗长。唯一名称在编程上仅用于将各项区分开。表现力强的名称是为了帮助人们阅读；因此，提供人们可以理解的名称是有意义的。不过，请确保选择的名称符合适用语言的规则和标准。
-
-以下几点是推荐的命名方法。
-
-1. 避免容易被主观解释的难懂的名称，如方法名 AnalyzeThis()，或者属性名 xxK8。这样的名称会导致多义性。
-2. 在类属性的名称中包含类名是多余的，如 Book.BookTitle。而是应该使用 Book.Title。
-3. 只要合适，在变量名的末尾或开头加计算限定符（Avg、Sum、Min、Max、Index）。
-4. 在变量名中使用互补对，如 min/max、begin/end 和 open/close。
-5. 布尔变量名应该包含 Is，这意味着 Yes/No 或 True/False 值，如 fileIsFound。
-6. 在命名状态变量时，避免使用诸如 Flag 的术语。状态变量不同于布尔变量的地方是它可以具有两个以上的可能值。不是使用 documentFlag，而是使用更具描述性的名称，如 documentFormatType。 （此项只供参考）
-7. 即使对于可能仅出现在几个代码行中的生存期很短的变量，仍然使用有意义的名称。仅对于短循环索引使用单字母变量名，如 i 或 j。 可能的情况下，尽量不要使用原义数字或原义字符串，如
-For i = 1 To 7。而是使用命名常数，如 For i = 1 To NUM_DAYS_IN_WEEK 以便于维护和理解。
-8. 用于事件处理的委托添加 **EventHandler** 后缀
-9. 用于事件处理之外的那些委托添加 **Callback** 后缀
-10. 不要给委托添加 **Delegate** 后缀
-11. 用名词或名词词组来给类型命名，在少数情况下也可以用形容词词组来给类型命名
-12. 用动词或动词词组来命名方法
-13. 用名词、名词词组或形容词来命名属性
-14. 要用动词或动词短语来命名事件
-15. 要用名词或名词短语来命名字段
-
-#### 5.2 大小写规则
-
-大写
-
-标识符中的所有字母都大写。仅对于由两个或者更少字母组成的标识符使用该约定。例如：
-
-**System.IO**
-
-**System.Web.UI**
-
-下表汇总了大写规则，并提供了不同类型的标识符的示例。
-
-标识符 | 	大小写 |	样例
-:---:|:---:|:---:
-类 | Pascal |	public class StreamReader { … }
-接口 | Pascal |	public interface IEnumerable { … }
-属性 | Pascal |	public string Name { get; set; }
-方法 | Pascal |	public class Object { public virtual string ToString(); }
-事件 | Pascal |	public class Process { public event EventHandler Exited; }
-字段(私有实例) | Camel | private string userName；
-字段(公共静态) | Pascal | public static readonly string UserId;
-常量 (const) | 全部大写 |	public const string PAGE_TITLE = "Welcome";
-枚举 | Pascal |	enum FileMode { Append, … }
-参数 | Camel |	public class Convert { public static int ToInt32(string userId); }
-命名空间 | Pascal |	namespace System.Security { … }
-
 ### 第六章 语句
 
-### 每行一个语句
+##### 6.1 每行一个语句
 
 每行最多包含一个语句。如：
 
@@ -883,7 +836,7 @@ b--; // 推荐
 a++; b--; // 不推荐
 ```
 
-### 复合语句
+##### 6.2 复合语句
 
 复合语句是指包含"父语句{子语句;子语句;}"的语句，使用复合语句应遵循以下几点
 
@@ -898,7 +851,7 @@ while(d += s++)
 }
 ```
 
-### return 语句
+##### 6.3 return 语句
 
 return语句中不使用括号，除非它能使返回值更加清晰。如：
 
@@ -941,7 +894,7 @@ else
 }
 ```
 
-### for、foreach 语句
+##### 6.4 for、foreach 语句
 
 **for 语句使用格式**
 
@@ -970,7 +923,7 @@ foreach (object obj in array)
 - 在循环过程中不要修改循环计数器。
 - 对每个空循环体给出确认性注释。
 
-### while 语句
+##### 6.5 while 语句
 
 **while 语句使用格式**
 
@@ -996,7 +949,7 @@ do
 } while (condition);
 ```
 
-### switch - case 语句
+##### 6.6 switch - case 语句
 
 switch - case语句使用格式
 
@@ -1023,7 +976,7 @@ switch (condition)
 - 为所有switch语句提供default分支。 
 - 所有的非空 case 语句必须用 break; 语句结束。
 
-### try - catch 语句
+##### 6.7 try - catch 语句
 
 try - catch语句使用格式
 
@@ -1042,7 +995,7 @@ finally
 }
 ```
 
-### using 块语句
+##### 6.8 using 块语句
 
 using 块语句使用格式
 
