--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -4,7 +4,7 @@ title: C#编码规范
 subtitle:   
 date:   2020-07-01
 author: JP
-header-img: img/post-bg-ioses.jpg
+header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
 - C#
@@ -861,7 +861,7 @@ return myDisk.size();
 return (size ? size : defaultSize);
 ```
 
-### if、 if-else、if else-if 语句
+##### 6.4 if、 if-else、if else-if 语句
  
 if、 if-else、if else-if 语句使用格式
 
@@ -894,7 +894,7 @@ else
 }
 ```
 
-##### 6.4 for、foreach 语句
+##### 6.5 for、foreach 语句
 
 **for 语句使用格式**
 
@@ -923,7 +923,7 @@ foreach (object obj in array)
 - 在循环过程中不要修改循环计数器。
 - 对每个空循环体给出确认性注释。
 
-##### 6.5 while 语句
+##### 6.6 while 语句
 
 **while 语句使用格式**
 
@@ -938,7 +938,7 @@ while (condition)
 
 `while (condition);`
  
-### do - while 语句
+##### 6.7 do - while 语句
 
 do - while 语句使用格式
 
@@ -949,7 +949,7 @@ do
 } while (condition);
 ```
 
-##### 6.6 switch - case 语句
+##### 6.8 switch - case 语句
 
 switch - case语句使用格式
 
@@ -976,7 +976,7 @@ switch (condition)
 - 为所有switch语句提供default分支。 
 - 所有的非空 case 语句必须用 break; 语句结束。
 
-##### 6.7 try - catch 语句
+##### 6.9 try - catch 语句
 
 try - catch语句使用格式
 
@@ -995,7 +995,7 @@ finally
 }
 ```
 
-##### 6.8 using 块语句
+##### 6.10 using 块语句
 
 using 块语句使用格式
 
