--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -14,13 +14,34 @@ tags:
 
 ### 第一章 概述
 
-#### 1.1 术语定义
+##### 1.1 规范制定原则
 
-##### 1.1.1 Pascal 大小写
-将标识符的首字母和后面连接的每个单词的首字母都大写。可以对三字符或更多字符的标识符使用Pascal 大小写。例如： BackColor
+* 方便代码的交流和维护。
+* 不影响编码的效率，不与大众习惯冲突。
+* 使代码更美观、阅读更方便。
+* 使代码的逻辑更清晰、更易于理解。
 
-##### 1.1.2 Camel 大小写
-标识符的首字母小写，而每个后面连接的单词的首字母都大写。例如：backColor
+#### 1.2 术语定义
+
+##### 1.2.1 Pascal 大小写
+将标识符的首字母和后面连接的每个单词的首字母都大写。可以对三字符或更多字符的标识符使用Pascal 大小写。例如：
+
+    `BackColor`
+
+##### 1.2.2 Camel 大小写
+标识符的首字母小写，而每个后面连接的单词的首字母都大写。例如：
+
+    `backColor`
+
+##### 1.2.3 匈牙利命名法
+
+匈牙利命名法是一名匈牙利程序员发明的，而且他在微软工作了多年。此命名法就是通过微软的各种产品和文档传出来的。多数有经验的程序员，不管他们用的是哪门儿语言，都或多或少在使用它。
+
+这种命名法的基本原则是：
+
+> 变量名＝属性＋类型＋对象描述
+
+即一个变量名是由三部分信息组成，这样，程序员很容易理解变量的类型、用途，而且便于记忆。
 
 ### 第二章 代码外观
 
@@ -39,7 +60,7 @@ tags:
 ##### 2.4  空行
 空行是为了将逻辑上相关联的代码分块，以便提高代码的可阅读性。在代码中，不能包含多个空行。       
 
-在一下情况下使用一个空行
+在以下情况下使用一个空行
 1. 方法与方法、属性与属性之间。
 2. 方法中变量声明与语句之间。
 3. 方法与方法之间。
@@ -824,6 +845,36 @@ public struct Color
 
 另外，避免使用与C#语言关键字冲突的标识符。
 
+#### 5.18 控件命名规则（参考）
+控件名简写+英文描述，英文描述首字母大写
+
+控件名 | 简写
+:---:|:---:
+AdRotator | ar
+Button | btn
+Calender | cld
+CheckBox | chk
+CheckBoxList | chkls
+CompareValidator | cv
+CrystalReportViewer | rptvew
+DropDownList | ddl
+DataGrid | dg
+DataList | dl
+Label | lbl
+LinkButton | lnkbtn
+ListBox | lst
+Panel | pnl
+RadioButton | rdo
+RangeValidator | rv
+RadioButtonList | rdolt
+RequiredFieldValidator | rfv
+RegularExpressionValidator | rev
+Image | img
+ImageButton | imgbtn
+ValidatorSummary | vs
+TextBox | txt
+Table | tbl
+
 ### 第六章 语句
 
 ##### 6.1 每行一个语句
@@ -1005,38 +1056,6 @@ using (object)
     statements;
 }
 ```
-
-### 第七章 控件命名规则（参考）
-
-#### 7.1控件命名规则（参考）
-控件名简写+英文描述，英文描述首字母大写
-
-控件名 | 简写
-:---:|:---:
-AdRotator | ar
-Button | btn
-Calender | cld
-CheckBox | chk
-CheckBoxList | chkls
-CompareValidator | cv
-CrystalReportViewer | rptvew
-DropDownList | ddl
-DataGrid | dg
-DataList | dl
-Label | lbl
-LinkButton | lnkbtn
-ListBox | lst
-Panel | pnl
-RadioButton | rdo
-RangeValidator | rv
-RadioButtonList | rdolt
-RequiredFieldValidator | rfv
-RegularExpressionValidator | rev
-Image | img
-ImageButton | imgbtn
-ValidatorSummary | vs
-TextBox | txt
-Table | tbl
 
 ### 第八章 代码分析
 
