--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -14,7 +14,7 @@ tags:
 
 ### 第一章 概述
 
-##### 1.1 规范制定原则
+#### 1.1 规范制定原则
 
 * 方便代码的交流和维护。
 * 不影响编码的效率，不与大众习惯冲突。
@@ -45,19 +45,19 @@ tags:
 
 ### 第二章 代码外观
 
-##### 2.1  列宽
+#### 2.1  列宽
 代码列宽控制在210字符左右。
 
-##### 2.2  换行
+#### 2.2  换行
 当表达式超出或即将超出规定的列宽，遵循以下规则进行换行
 1. 在逗号后换行;
 2. 在操作符前换行;
 3. 规则1优先于规则2。  
 
-##### 2.3  缩进
+#### 2.3  缩进
 缩进应该是每行一个Tab(4个空格)，不要在代码中使用Tab字符。
      
-##### 2.4  空行
+#### 2.4  空行
 空行是为了将逻辑上相关联的代码分块，以便提高代码的可阅读性。在代码中，不能包含多个空行。       
 
 在以下情况下使用一个空行
@@ -69,7 +69,7 @@ tags:
 6. 属性与方法、属性与字段、方法与字段之间。
 7. 注释与它注释的语句间不空行，但与其他的语句间空一行。
          
-##### 2.5  空格
+#### 2.5  空格
 在以下情况中要使用到空格
 1. 关键字和左括符 “(” 应该用空格隔开。如:
 
@@ -98,7 +98,7 @@ tags:
 
     ` for (expr1; expr2; expr3) `
 
-##### 2.6  括号 - ()
+#### 2.6  括号 - ()
 
 1. 左括号“(” 不要紧靠关键字，中间用一个空格隔开。
 2. 左括号“(”  与方法名之间不要添加任何空格。
@@ -112,7 +112,7 @@ tags:
     }
 ```
 
-##### 2.7  花括号 - {}
+#### 2.7  花括号 - {}
 
 1、左花括号 “{” 放于关键字或方法名的下一行并与之对齐。如
 
@@ -155,7 +155,7 @@ tags:
 
 ### 第三章 程序注释
 
-##### 3.1  注释概述
+#### 3.1  注释概述
 
 1. 修改代码时，总是使代码周围的注释保持最新。
 
@@ -175,15 +175,15 @@ tags:
 15. 在整个应用程序中，使用具有一致的标点和结构的统一样式来构造注释。
 16. 用空白将注释同注释分隔符分开。在没有颜色提示的情况下查看注释时，这样做会使注释很明显且容易被找到。
 17. 在所有的代码修改处加上修改标识的注释。
-18. 为了是层次清晰，在闭合的右花括号后注释该闭合所对应的起点。
+18. 为了使层次清晰，在闭合的右花括号后注释该闭合所对应的起点。
 
 ``` cs
-    namespace Langchao.Procument.Web
+    namespace Mango.Procument.Web
     {
-    } // namespace Langchao.Procument.Web
+    } // namespace Mango.Procument.Web
 ```
 
-##### 3.2 文件注释
+#### 3.2 文件注释
 在每个文件头必须包含以下注释说明:
 
 ``` cs
@@ -210,10 +210,11 @@ tags:
 C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\ItemTemplates\CSharp\Code\2052\Class
 ```
 
-``` cs
-#vs2017
-C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\ItemTemplates\CSharp\Code\2052\Class
-```
+这里根据你的vs版本可能路径要做适当的调整，
+
+Community、Professional、Enterprise
+
+上面的路径中 Code 文件夹下有两个目录 1033 和 2052，这两个文件夹为 [LCID（Locale ID，区域性标识符）](https://docs.microsoft.com/en-us/previous-versions/windows/embedded/ms912047(v=winembedded.10)?redirectedfrom=MSDN) 其中，2052、1033 分别为 默认中文简体（中华人民共和国）、英语（美国）的Microsoft语言环境ID值。如果你的开发工具为中文版，就去2052文件夹下修改，英文版去1033下修改。
 
 打开文件，在顶部添加注释
 ``` cs
@@ -254,7 +255,7 @@ C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\ItemT
     }
 ```
 
-##### 3.3 文档型注释
+#### 3.3 文档型注释
  该类注释采用.Net已定义好的Xml标签来标记，在声明接口、类、方法、属性、字段都应该使用该类注释，以便代码完成后直接生成代码文档，让别人更好的了解代码的实现和接口。如:
 
 1. 类、接口注释
@@ -358,7 +359,7 @@ C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\ItemT
 
 ### 第四章 声明
 
-##### 4.1 每行声明数
+#### 4.1 每行声明数
 
 一行只建议作一个声明，并按字母顺序排列。如：
 
@@ -368,11 +369,11 @@ int size; // 推荐
 int x, y; // 不推荐
 ```
 
-##### 4.2 初始化
+#### 4.2 初始化
 
 建议在变量声明时就对其做初始化。
 
-##### 4.3 位置
+#### 4.3 位置
 
 变量建议置于块的开始处，不要总是在第一次使用它们的地方做声明。如：
 
@@ -415,13 +416,13 @@ void MyMethod()
 }
 ```
 
-##### 4.4 类和接口的声明
+#### 4.4 类和接口的声明
 
 - 在方法名与其后的左括号间没有任何空格。
 - 左花括号 “{” 出现在声明的下行并与之对齐，单独成行。
 - 方法间用一个空行隔开。
 
-##### 4.5 字段的声明
+#### 4.5 字段的声明
 
 不要使用是 public 或 protected 的实例字段。如果避免将字段直接公开给开发人员，可以更轻松地对类进行版本控制，原因是在维护二进制兼容性时字段不能被更改为属性。考虑为字段提供 get 和set 属性访问器，而不是使它们成为公共的。 get 和 set 属性访问器中可执行代码的存在使得可以进行后续改进，如在使用属性或者得到属性更改通知时根据需要创建对象。下面的代码示例阐释带有 get 和 set 属性访问器的私有实例字段的正确使用。例：
 
@@ -442,7 +443,7 @@ public class Control: Component
 
 ### 第五章 命名规范
 
-##### 5.1 命名概述
+#### 5.1 命名概述
 
 > 名称应该说明“什么”而不是“如何”。通过避免使用公开基础实现（它们会发生改变）的名称，可以保留简化复杂性的抽象层。例如，可以使用 `GetNextStudent()`，而不是 `GetNextArrayElement`()。 
 
@@ -469,7 +470,7 @@ public class Control: Component
 -  要用动词或动词短语来命名事件
 -  要用名词或名词短语来命名字段
 
-##### 5.2 大小写规则
+#### 5.2 大小写规则
 
 **大写**
 
@@ -571,7 +572,7 @@ SCB.Framework.UI
     </tbody>
 </table>
 
-##### 5.3 缩写
+#### 5.3 缩写
 
 为了避免混淆和保证跨语言交互操作，请遵循有关区缩写的使用的下列规则： 
 
@@ -582,7 +583,7 @@ SCB.Framework.UI
 - 在使用缩写时，对于超过两个字符长度的缩写请使用 Pascal 大小写或 Camel 大小写。例如使用 `HtmlButton` 或 `HTMLButton`；但是，应当大写仅有两个字符的缩写，如：`System.IO`，而不是 `System.Io`。
 - 不要在标识符或参数名称中使用缩写。如果必须使用缩写，对于由多于两个字符所组成的缩写请使用Camel 大小写。
 
-##### 5.4 命名空间
+#### 5.4 命名空间
 
 - 命名命名空间时的一般性规则是使用公司名称，后跟技术名称和可选的功能与设计，如：
 
@@ -599,7 +600,7 @@ namespace SCB.SupplierChain.DataRules // 赛酷比公司的供应链系统的业
 - `TechnologyName` 指的是该项目的英文缩写或软件名。
 - 命名空间和类不能使用同样的名字。例如，有一个类被命名为`Debug`后，就不要再使用`Debug`作为一个名称空间名。
  
-##### 5.5 类
+#### 5.5 类
 
 - 使用 Pascal 大小写。
 - 用名词或名词短语命名类。
@@ -615,7 +616,7 @@ public class Button
 public class String
 ```
 
-##### 5.6 接口
+#### 5.6 接口
 
 - 用名词或名词短语，或者描述行为的形容词命名接口。例：
   - 接口名称 `IComponent` 使用描述性名词
@@ -645,7 +646,7 @@ public class Component: IComponent
 }
 ```
 
-##### 5.7 属性类 (Attribute)
+#### 5.7 属性类 (Attribute)
 
 应该总是将后缀 Attribute 添加到自定义属性类。例：
 
@@ -655,7 +656,7 @@ public class ObsoleteAttribute
 }
 ```
 
-##### 5.8 枚举 (Enum)
+#### 5.8 枚举 (Enum)
 
 枚举 (Enum) 值类型从 Enum 类继承。 
 
@@ -665,7 +666,7 @@ public class ObsoleteAttribute
 - 对大多数 Enum 类型使用单数名称，但是对作为位域的 Enum 类型使用复数名称。
 - 总是将 `FlagsAttribute` 添加到位域 Enum 类型。
 
-##### 5.9 参数
+#### 5.9 参数
  
 - 使用描述性参数名称。参数名称应当具有足够的描述性，以便参数的名称及其类型可用于在大多数情况下确定它的含义。
 - 对参数名称使用 Camel 大小写。
@@ -678,7 +679,7 @@ Type GetType(string typeName)
 string Format(string format, object args)
 ```
 
-##### 5.10 方法
+#### 5.10 方法
  
 - 使用动词或动词短语命名方法。 
 - 使用 Pascal 大小写。
@@ -689,7 +690,7 @@ GetCharArray()
 Invoke()
 ```
 
-##### 5.11 属性 (property)
+#### 5.11 属性 (property)
 
 - 使用名词或名词短语命名属性。 
 - 使用 Pascal 大小写。 
@@ -731,7 +732,7 @@ public class Control
 }
 ```
 
-##### 5.12 事件
+#### 5.12 事件
  
 - 对事件处理程序名称使用 `EventHandler` 后缀。 
 - 指定两个名为 `sender` 和 `e` 的参数。`sender` 参数表示引发事件的对象。`sender` 参数始
@@ -779,13 +780,13 @@ public class MouseEventArgs : EventArgs
 }
 ```
 
-##### 5.13 常量 (const)
+#### 5.13 常量 (const)
  
 所有单词大写，多个单词之间用 "_" 隔开。 如：
 
 `public const string PAGE_TITLE = "Welcome";`
 
-##### 5.14 字段
+#### 5.14 字段
  
 - private、protected 使用 Camel 大小写。
 - public 使用 Pascal 大小写。
@@ -829,17 +830,17 @@ public struct Color
 }
 ```
 
-##### 5.15 静态字段
+#### 5.15 静态字段
  
 - 使用名词、名词短语或者名词的缩写命名静态字段。
 - 使用 Pascal 大小写。
 - 建议尽可能使用静态属性而不是公共静态字段。
 
-##### 5.16 集合
+#### 5.16 集合
 
 集合是一组组合在一起的类似的类型化对象，如哈希表、查询、堆栈、字典和列表，集合的命名建议用复数。
 
-##### 5.17 措词
+#### 5.17 措词
 
 避免使用与常用的 .NET 框架命名空间重复的类名称。例如，不要将以下任何名称用作类名称：System、Collections、Forms 或 UI。有关 .NET 框架命名空间的列表，请参阅类库。
 
@@ -877,7 +878,7 @@ Table | tbl
 
 ### 第六章 语句
 
-##### 6.1 每行一个语句
+#### 6.1 每行一个语句
 
 每行最多包含一个语句。如：
 
@@ -887,7 +888,7 @@ b--; // 推荐
 a++; b--; // 不推荐
 ```
 
-##### 6.2 复合语句
+#### 6.2 复合语句
 
 复合语句是指包含"父语句{子语句;子语句;}"的语句，使用复合语句应遵循以下几点
 
@@ -902,7 +903,7 @@ while(d += s++)
 }
 ```
 
-##### 6.3 return 语句
+#### 6.3 return 语句
 
 return语句中不使用括号，除非它能使返回值更加清晰。如：
 
@@ -912,7 +913,7 @@ return myDisk.size();
 return (size ? size : defaultSize);
 ```
 
-##### 6.4 if、 if-else、if else-if 语句
+#### 6.4 if、 if-else、if else-if 语句
  
 if、 if-else、if else-if 语句使用格式
 
@@ -945,7 +946,7 @@ else
 }
 ```
 
-##### 6.5 for、foreach 语句
+#### 6.5 for、foreach 语句
 
 **for 语句使用格式**
 
@@ -974,7 +975,7 @@ foreach (object obj in array)
 - 在循环过程中不要修改循环计数器。
 - 对每个空循环体给出确认性注释。
 
-##### 6.6 while 语句
+#### 6.6 while 语句
 
 **while 语句使用格式**
 
@@ -989,7 +990,7 @@ while (condition)
 
 `while (condition);`
  
-##### 6.7 do - while 语句
+#### 6.7 do - while 语句
 
 do - while 语句使用格式
 
@@ -1000,7 +1001,7 @@ do
 } while (condition);
 ```
 
-##### 6.8 switch - case 语句
+#### 6.8 switch - case 语句
 
 switch - case语句使用格式
 
@@ -1027,7 +1028,7 @@ switch (condition)
 - 为所有switch语句提供default分支。 
 - 所有的非空 case 语句必须用 break; 语句结束。
 
-##### 6.9 try - catch 语句
+#### 6.9 try - catch 语句
 
 try - catch语句使用格式
 
@@ -1046,7 +1047,7 @@ finally
 }
 ```
 
-##### 6.10 using 块语句
+#### 6.10 using 块语句
 
 using 块语句使用格式
 
@@ -1145,8 +1146,8 @@ CA2230 | 对个数可变的参数使用 params		| √
 CA2233 | 运算不应溢出	| 	√
 
 
-##### 参考文档：<br/>
+#### 参考文档：<br/>
 
-1. [C#编码规范](https://gist.github.com/zhuqling/a2700703d088b8746f0c)
-2. [C#编程规范](https://www.cnblogs.com/sntetwt/archive/2011/03/26/1996055.html)
-3. [StyleCop](https://github.com/StyleCop/StyleCop)
+- [C#编码规范](https://gist.github.com/zhuqling/a2700703d088b8746f0c)
+- [C#编程规范](https://www.cnblogs.com/sntetwt/archive/2011/03/26/1996055.html)
+- [StyleCop](https://github.com/StyleCop/StyleCop)
