--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -1151,4 +1151,5 @@ CA2233 | 运算不应溢出	| 	√
 
 - [C#编码规范](https://gist.github.com/zhuqling/a2700703d088b8746f0c)
 - [C#编程规范](https://www.cnblogs.com/sntetwt/archive/2011/03/26/1996055.html)
+- [Visual Studio 自动生成注释](https://www.lxtx.tech/index.php/archives/29/)
 - [StyleCop](https://github.com/StyleCop/StyleCop)
