--- a/_posts/2017-02-15-Git指令整理.md
+++ b/_posts/2017-02-15-Git指令整理.md
@@ -16,25 +16,25 @@ tags:
 
 #### Git全局设置：
 
-git config --global user.name "your name"
-git config --global user.email "email@example.com"
+	git config --global user.name "your name"
+	git config --global user.email "email@example.com"
 
 #### 创建Git仓库：
 
-mkdir Project -- 创建你的项目目录
-cd Project --进入你的项目目录
-git init 
-touch README.md
-git add README.md
-git commit -m "first commit"
-git remote add origin https://gitee.com/码云用户名/项目名.git
-git push -u origin master
+	mkdir Project -- 创建你的项目目录
+	cd Project --进入你的项目目录
+	git init 
+	touch README.md
+	git add README.md
+	git commit -m "first commit"
+	git remote add origin https://gitee.com/码云用户名/项目名.git
+	git push -u origin master
 
 #### 已有项目
 
-cd existing_git_repo
-git remote add origin https://gitee.com/码云用户名/项目名.git
-git push -u origin master
+	cd existing_git_repo
+	git remote add origin https://gitee.com/码云用户名/项目名.git
+	git push -u origin master
 
 # GitHub创建仓库提示代码
 
@@ -42,14 +42,13 @@ git push -u origin master
 	git init
 	git add README.md
 	git commit -m "first commit"
-	git remote add origin git@github.com:qiubaiying/项目名.git
+	git remote add origin git@github.com:Github用户名/项目名.git
 	git push -u origin master
 
 若仓库存在直接push
 
-	git remote add origin git@github.com:qiubaiying/test.git
+	git remote add origin git@github.com:Github用户名/test.git
 	git push -u origin master
-
 
 # 常用操作
 
