--- a/_posts/2021-03-10-MySQL复习-1.md
+++ b/_posts/2021-03-10-MySQL复习-1.md
@@ -11,7 +11,7 @@ tags:
 - MySQL
 ---
 
-## 与MySQL的第一次亲密接触
+> 与MySQL的第一次亲密接触
 
 ### 数据库的相关概念
 
@@ -23,7 +23,7 @@ tags:
 #### 二、数据库的常见概念 ★
 1、DB：数据库，存储数据的容器<br/>
 2、DBMS：数据库管理系统，又称为数据库软件或数据库产品，用于创建或管理DB<br/>
-3、SQL：结构化查询语言，用于和数据库通信的语言，不是某个数据库软件特有的，而是几乎所有的主流数据库软件通用的语言
+3、SQL：(Structure Query Language)结构化查询语言，用于和数据库通信的语言，不是某个数据库软件特有的，而是几乎所有的主流数据库软件通用的语言
 
 #### 三、数据库存储数据的特点
 1、数据存放到表中，然后表再放到库中<br/>
