--- a/_posts/2021-03-10-MySQL复习-1.md
+++ b/_posts/2021-03-10-MySQL复习-1.md
@@ -31,7 +31,7 @@ tags:
 3、表中有一个或多个列，列又称为“字段”，相当于java中“属性”<br/>
 4、表中的每一行数据，相当于java中“对象”
 
-#### 四、常见的数据库管理系统
+#### 四、常见的数据库
 mysql、oracle、db2、sqlserver
 
 ### MySQL介绍
