--- a/_posts/2021-03-10-MySQL复习-2.md
+++ b/_posts/2021-03-10-MySQL复习-2.md
@@ -276,6 +276,8 @@ group by 分组的字段
 【order by 排序列表】
 ```
 
+执行顺序：from->where->group by->having->select->order by(一般放在最后)
+
 二、特点
 
  | | 使用关键字 | 筛选的表 | 位置 |
@@ -334,9 +336,9 @@ select 字段1，字段2 from 表1，表2,...;
 
 特点：
 	① 一般为表起别名
-	②多表的顺序可以调换
-	③n表连接至少需要n-1个连接条件
-	④等值连接的结果是多表的交集部分
+	② 多表的顺序可以调换
+	③ n表连接至少需要n-1个连接条件
+	④ 等值连接的结果是多表的交集部分
 ```
 
 
