--- a/_posts/2021-03-10-MySQL复习.md
+++ b/_posts/2021-03-10-MySQL复习.md
@@ -11,7 +11,7 @@ tags:
 - MySQL
 ---
 
-- [与MySQL的第一次亲密接触](2021-03-10-MySQL复习-1.md)
+- [与MySQL的第一次亲密接触](./MySQL复习-1.md)
 - [DQL(Data QueryLanguage)语言](./2021-03-10-MySQL复习-2.md)
 - [DML(Data Manipulation Language)数据操纵语言](./2021-03-10-MySQL复习-3.md)
 - [DDL(Data Definition Language)数据定义语言](./2021-03-10-MySQL复习-4.md)
