--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -785,7 +785,9 @@ public class MouseEventArgs : EventArgs
  
 所有单词大写，多个单词之间用 "_" 隔开。 如：
 
-`public const string PAGE_TITLE = "Welcome";`
+```cs
+public const string PAGE_TITLE = "Welcome";
+```
 
 #### 5.14 字段
  
@@ -960,7 +962,9 @@ for (initialization; condition; update)
 
 **空的 for 语句**（所有的操作都在`initialization`、`condition` 或 `update`中实现）使用格式
 
-`for (initialization; condition; update); // update user id`
+```cs
+for (initialization; condition; update); // update user id
+```
 
 **foreach 语句使用格式**
 
@@ -1123,6 +1127,7 @@ CA1724 |	类型名不应与命名空间冲突		| √
 CA1725 | 参数名应与基方法中的声明保持一致	| 	√
 
 #### 8.5.性能规则
+
 标识 | 	详细信息 |	是否检查
 :---:|:---:|:---:
 CA1800 | 避免进行不必要的强制转换	| 	√
@@ -1135,6 +1140,7 @@ CA1819 | 属性不应返回数组	| 	√
 CA1823 | 避免未使用的私有字段	| 	√
 
 #### 8.6.用法规则
+
 标识 | 	详细信息 |	是否检查
 :---:|:---:|:---:
 CA1801 | 检查未使用的参数	| 	√
