--- a/_posts/2020-07-01-C#编码规范.md
+++ b/_posts/2020-07-01-C#编码规范.md
@@ -45,6 +45,8 @@ tags:
 
 ### 第二章 代码外观
 
+提示：可以借助VisualStudio提供的代码格式化工具Ctrl+K+F格式化你所选中的代码。
+
 #### 2.1  列宽
 代码列宽控制在210字符左右。
 
@@ -794,12 +796,13 @@ public const string PAGE_TITLE = "Welcome";
 - private、protected 使用 Camel 大小写。
 - public 使用 Pascal 大小写。
 - 拼写出字段名称中使用的所有单词。仅在开发人员一般都能理解时使用缩写。
+- 字段变量名前可加“_”前缀
 
 ```cs
 class SampleClass
 {
-    string url;
-    string destinationUrl;
+    string _url;
+    string _destinationUrl;
 }
 ```
 
