--- a/_posts/2019-08-22-XAML编码规范.md
+++ b/_posts/2019-08-22-XAML编码规范.md
@@ -96,6 +96,7 @@ Grid.Column / Grid.Row属性就是典型的例子
 
 ## 四、推荐工具
 强烈推荐在VisualStudio中安装[XAML Styler](https://github.com/Xavalon/XamlStyler)插件，XAML Styler是Visual Studio扩展，它基于一组样式规则来格式化XAML源代码。此工具可以帮助我们更好的维护XAML编码样式以及提高XAML的可读性。<br/>
+你可以在VisualStudio的拓展功能中，搜索XAML Styler并添加此插件。
 除了该插件提供的默认格式化样式外，您也可以通过修改XAML默认样式[External Configurations](https://github.com/Xavalon/XamlStyler/wiki/External-Configurations)，来实现自定义代码风格。
 
 Reference: 
